# mcp-reddit-mod

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  knip.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-mcp-server-foundation/: 01-00-PLAN.md  01-00-SUMMARY.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02a-PLAN.md  01-02a-SUMMARY.md  01-02b-PLAN.md  01-02b-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-reddit-integration/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-reddit-integration-VERIFICATION.md
.planning/phases/03-moderation-tools/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-production-deployment/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: __init__.py  config.py  main.py  modtools.py  reddit_client.py  server.py
tests/: __init__.py  conftest.py  test_moderation_tools.py  test_reddit_client.py  test_server.py
