[project]
name = "italia-career-mod"
version = "0.1.0"
description = "AI-assisted Reddit moderation MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "praw>=7.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
italia-career-mod = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
